[metadata]
name = enva
author = Tom Titcombe
author_email = tom@documatic.com
description = Utility tools for working with environment variables
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_version == "3.10"

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    **/__init__.py: F401
